# esp32-thermostat

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  devenv.nix  devenv.yaml  flake.nix
crates/client/: Cargo.toml
crates/client/.cargo/: config.toml
crates/client/src/: config.rs  main.rs  task.rs
crates/client/src/task/: heater.rs  network.rs  onewire.rs  telemetry.rs  wifi.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/server/: Cargo.toml
crates/server/assets/css/: main.css
crates/server/assets/js/: main.js
crates/server/migrations/duckdb/: 0001_telemetry.sql  0002_node.sql
crates/server/src/: db.rs  main.rs  telemetry.rs  web.rs
crates/server/src/web/: assets.rs  view.rs
crates/server/src/web/handler/: node.rs
crates/server/src/web/view/: model.rs  node.rs  util.rs
