[package]
name = "esp32-thermostat-client"
version = "0.1.0"
edition = "2024"

[dependencies]
esp32-thermostat-common = { path = "../common", features = ["nostd", "defmt"] }

cfg-if = "1.0.4"

embassy-executor = { version = "0.10.0", features = ["defmt"] }
embassy-futures = "0.1.2"
embassy-net = { version = "0.9.1", features = [
  "dhcpv4",
  "medium-ethernet",
  "udp",
  "defmt",
] }
embassy-sync = "0.8.0"
embassy-time = "0.5.1"

embedded-io-async = "0.7.0"
embedded-storage = "0.3"

esp-alloc = { version = "0.10.0", features = ["defmt"] }
esp-backtrace = { version = "0.19.0", features = ["panic-handler", "defmt"] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["defmt"] }
esp-config = { version = "0.7", features = [] }
esp-hal = { version = "1.1.0-rc.0", features = ["defmt", "unstable"] }
esp-radio = { version = "0.18.0", features = ["defmt", "wifi", "unstable"] }
esp-rtos = { version = "0.3.0", features = ["defmt", "embassy", "esp-radio"] }
esp-storage = { version = "0.9" }

esp-hal-rmt-onewire = { git = "https://github.com/zaytsev/esp-hal-rmt-onewire.git", branch = "rust-stable" }

defmt = { version = "1" }
defmt-rtt = { version = "1" }

static_cell = "2.1.1"

clatter = { version = "2.2.0", default-features = false, features = [
  "use-25519",
  "use-aes-gcm",
  "use-sha",
] }
fixed = "1.31"
heapless = { version = "0.9.2", features = ["serde", "defmt"] }
nb = "1.1"
postcard = { version = "1.1.3", default-features = false, features = [
  "heapless-cas",
  "use-defmt",
] }
serde = { version = "1.0", default-features = false }

[features]
default = ["esp32c3"]

esp32c3 = [
  "esp-hal/esp32c3",
  "esp-backtrace/esp32c3",
  "esp-rtos/esp32c3",
  "esp-storage/esp32c3",
  "esp-radio/esp32c3",
  "esp-bootloader-esp-idf/esp32c3",
]

[profile.dev]
opt-level = "s"

[profile.esp32-c3-release]
inherits = "release"
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
