[package]
name = "esp32-thermostat-server"
version = "0.1.0"
edition = "2024"

[dependencies]
esp32-thermostat-common = { path = "../common" }

clap = { version = "4", features = ["derive", "env"] }

base62 = { version = "2.2.3", features = ["alloc", "std"] }
chrono = { version = "0.4.42", features = ["serde"] }
clatter = { version = "2.0", default-features = false, features = [
  "use-25519",
  "use-aes-gcm",
  "use-sha",
  "std",
  "alloc",
] }
dashmap = "6.1"
hmac = "0.12"
itertools = "0.14"
postcard = { version = "1.1.3", default-features = false, features = [
  "use-std",
  "alloc",
] }
rand = { version = "0.9" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1" }
sha2 = "0.10"

async-trait = "0.1.89"
tokio = { version = "1", features = ["full"] }

anyhow = "1.0.100"
thiserror-no-std = { version = "2.0.2", features = ["std"] }

tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }

axum = "0.8.7"
axum-embed = "0.1.0"
axum-extra = { version = "0.12", features = ["routing", "typed-routing"] }
maud = { version = "0.27.0", features = ["axum"] }
rust-embed = "8.9.0"

duckdb = { version = "1.4.3", features = ["chrono"] }

[dev-dependencies]
tempfile = "3.23.0"
